# perfume_intelligence_platform

./: .env.docker  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  apply_schema.py  check_db.py  cleanup_db.py  cli_scrape_all.py  docker-compose.yaml  docker-compose.yml  dump_html.py  inspect_data.py  main.py  migrate.py  pyproject.toml  requirements.txt  response.json  schema.sql  seed_sources.py  show_products.py  test_api.py  test_end_to_end_scraping.py  test_normalization.py  trigger_production_scrape.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_b2b_wholesale_schema.py.bak  002_b2b_wholesale_schema_fixed.py
app/: __init__.py  ai_pipeline.py  database.py  database_async.py  delta_engine.py  exceptions.py  main.py  models.py  normalization.py  product_code_generator.py  reliability_scorer.py  scheduler.py  schemas.py  scraper_worker.py  worker.py
app/scrapers/: __init__.py  base.py  factory.py  jumpseller.py  playwright_b2b.py  shopify.py  woocommerce.py
scrapers/: __init__.py  base.py  beautifulsoup.py  factory.py  playwright.py  shopify.py
test/: test_bedrock.py  test_fetch.py  test_fetch2.py  test_invoke.py  test_multi.py  test_openai.py  test_pipeline.py
tests/: test_delta_engine.py  test_exceptions.py  test_normalization.py  test_product_code.py
