[project]
name = "perfume-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.43.17",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "gevent>=26.5.0",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "ollama>=0.6.2",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
